Bug 106260 - EDITING: Cannot copy&paste URLs
Summary: EDITING: Cannot copy&paste URLs
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.2 all versions
Hardware: All All
: medium normal
Assignee: Paul Trojahn
URL:
Whiteboard: target:6.2.0 target:6.1.2
Keywords: bibisected, bisected, regression
: 106386 117380 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-03-01 15:56 UTC by Frank Winklmeier
Modified: 2018-09-11 07:54 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Winklmeier 2017-03-01 15:56:12 UTC
Copy&paste of URLs does not work in Impress

Steps to Reproduce:
1) Open a new presentation
2) Write "http://google.com" and hit Enter (URL will be auto-formated to a link)
3) Select the URL, copy or cut, paste

Nothing happens on the paste step. The URL seems to end up in the Clipboard though because one can paste it in another application.

The problem seems Impress specific as it works fine in Writer.
Comment 1 Julien Nabet 2017-03-01 18:25:27 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

I noticed this on console:
warn:vcl:8495:1:vcl/source/window/mouse.cxx:470: Window::ReleaseMouse(): window doesn't have the mouse capture
warn:svx:8495:1:svtools/source/control/valueacc.cxx:667: Calling disposed object. Throwing exception:
warn:svx:8495:1:svtools/source/control/valueacc.cxx:667: Calling disposed object. Throwing exception:
warn:svx:8495:1:svx/source/accessibility/AccessibleTextHelper.cxx:1437: Unhandled exception.
warn:svx:8495:1:svx/source/accessibility/AccessibleTextHelper.cxx:1437: Unhandled exception.
Comment 2 QA Administrators 2018-03-02 03:41:39 UTC Comment hidden (obsolete)
Comment 3 Frank Winklmeier 2018-03-02 08:26:03 UTC
Bug still present in:

Version: 6.0.2.1
Build ID: 1:6.0.2~rc1-0ubuntu0.16.04.1~lo1
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 4 Xisco Faulí 2018-05-02 09:01:11 UTC
*** Bug 117380 has been marked as a duplicate of this bug. ***
Comment 5 Xisco Faulí 2018-05-02 09:18:40 UTC
Regression introduced by:

author	Markus Mohrhard <markus.mohrhard@googlemail.com>	2016-04-10 05:51:19 +0200
committer	Markus Mohrhard <markus.mohrhard@googlemail.com>	2016-04-10 05:55:55 +0200
commit be829fa15777b3b1a6727eee231c89894e7c425e (patch)
tree 24dc7fa1287928f7e5e9e6dae8377b0bc6a8982d
parent 7b9a5e8124328da9d81aed58cf944c91560a7c07 (diff)
don't pool SvxFieldItem, tdf#92773
In documents with many different hyperlinks pooling them is incredibly
slow. I doubt that in most cases the hyperlinks are the same so let us
just not pool them.

Bisected with: bibisect-linux-64-5.2

Adding Cc: to Markus Mohrhard
Comment 6 Aron Budea 2018-05-11 14:04:26 UTC
For me this started earlier, between 4.3 and 4.4, from the following commit (bibisected using repo bibisect-44max).

https://cgit.freedesktop.org/libreoffice/core/commit/?id=139ca8f26419d4b3e4f478ef8ff7536176c54f1c
author		matteocam <matteo.campanelli@gmail.com>	2014-05-31 01:09:50 -0400
committer	Fridrich Štrba <fridrich.strba@bluewin.ch>	2014-06-30 22:54:39 +0200

Added EE_CHAR_BKGCOLOR
Comment 7 Julien Nabet 2018-05-12 08:41:21 UTC
Noel: I noticed SID_FIELD has been removed with https://cgit.freedesktop.org/libreoffice/core/commit/?id=fa135fd0e05fc4ba784b4349d65f2e5ed26c0f55

In editeng/source/editeng/editdoc.cxx, aItemInfos contains EDITITEMCOUNT but is initialized until EE_FEATURE_NOTCONV.
see https://opengrok.libreoffice.org/xref/core/editeng/source/editeng/editdoc.cxx#161

EDITITEMCOUNT comes from https://opengrok.libreoffice.org/xref/core/include/editeng/eeitem.hxx#137 which contains:
131  #define EE_FEATURE_NOTCONV          (EE_ITEMS_START+53)
but also
132  #define EE_FEATURE_FIELD            (EE_ITEMS_START+54)

Do you think it might trigger a problem here?
Comment 8 jose.velez 2018-05-12 11:26:49 UTC
Workaround
==========

Copy and paste the hyperlink normally. 

Then, press the delete key (not the suppress key).

Finally press CTRL+Z

Your hyperlink will appear magically.
Comment 9 Noel Grandin 2018-05-12 14:06:14 UTC Comment hidden (obsolete)
Comment 10 Julien Nabet 2018-05-16 19:14:34 UTC
(In reply to Noel Grandin from comment #9)
> @Julien, if you want to debug this, set some breakpoints in dtrans/ and
> follow the code from there,

I added some traces on dtrans/cnttype/mcnttfactory.cxx in CMimeContentTypeFactory ctr and when reproducing the bug, I noticed the trace appeared many times.
I've already tried to debug this kind of bug and got lost each time in gdb.
Sorry, can't help here.
Anyway, thank you for your feedback! :-)
Comment 11 Noel Grandin 2018-05-25 12:00:28 UTC
Unfortunately, reverting the thing Julien spotted in comment 7 doesn't help
Comment 12 Noel Grandin 2018-05-28 08:22:08 UTC
I can confirm that the following commit is at fault, I built LO at that version and the version before it.

 
https://cgit.freedesktop.org/libreoffice/core/commit/?id=139ca8f26419d4b3e4f478ef8ff7536176c54f1c
author		matteocam <matteo.campanelli@gmail.com>	2014-05-31 01:09:50 -0400
committer	Fridrich Štrba <fridrich.strba@bluewin.ch>	2014-06-30 22:54:39 +0200

Added EE_CHAR_BKGCOLOR
Comment 13 Commit Notification 2018-08-26 08:08:33 UTC
Paul Trojahn committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7b52990a234bfd6d4efcbc9fe51e240e065faeea

tdf#106260 Fix invisible pasted urls

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Xisco Faulí 2018-08-27 08:29:57 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 63f8c506637c910ed1efa572f23ff1af7715e7e3
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Paul Trojahn, Thanks for fixing this!!

Backported to 6.1: https://gerrit.libreoffice.org/#/c/59641/
Comment 15 Paul Trojahn 2018-08-27 18:57:58 UTC
*** Bug 106386 has been marked as a duplicate of this bug. ***
Comment 16 Commit Notification 2018-08-28 15:10:05 UTC
Paul Trojahn committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4efa7cdc891b92b03e3335f7d410321db8109491&h=libreoffice-6-1

tdf#106260 Fix invisible pasted urls

It will be available in 6.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.