tdf#106260 Fix invisible pasted urls

UpdateFields() was never called after pasting a field.

Change-Id: I91f3eb183a0545d8735c0844f1e864a287101d22